fixed layout issues, works on mobile etc

--- a/static/simple-sidebar.css
+++ b/static/simple-sidebar.css
@@ -24,42 +24,42 @@ li {
     color: #D7D9DB;
 }
 
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
+ #sidebar-wrapper {
+    z-index: 1000; 
+    position: fixed; 
     left: 250px;
-    width: 0;
+    width: 0;  
     height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
+    margin-left: -250px; 
+    overflow-y: auto; 
     background: #333F4D;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+    -webkit-transition: all 0.5s ease; 
+    -moz-transition: all 0.5s ease; 
+    -o-transition: all 0.5s ease; 
+    transition: all 0.5s ease; 
+} 
 
-#wrapper.toggled #sidebar-wrapper {
+  #wrapper.toggled #sidebar-wrapper {
     width: 180px;
-}
+}  
 
-#page-content-wrapper {
+ #page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
-}
+} 
 
-#wrapper.toggled #page-content-wrapper {
+ #wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -250px;
-}
+} 
 
 
 /* Sidebar Styles */
 
 a:hover {color: #333F4D;}
 
-.sidebar-nav {
+ .sidebar-nav {
     position: absolute;
     top: 20;
     left: -21;
@@ -67,12 +67,12 @@ a:hover {color: #333F4D;}
     margin: 0;
     padding: 0;
     list-style: none;
-}
+} 
 
-.sidebar-nav li {
+ .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
-}
+} 
 
 .sidebar-nav li a {
     display: block;
@@ -80,51 +80,49 @@ a:hover {color: #333F4D;}
     color: #999999;
 }
 
-.sidebar-nav li a:hover {
+ .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
     background: rgba(255, 255, 255, 0.2);
-}
+} 
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
 }
-
+ 
 .sidebar-nav > .sidebar-brand {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
-}
+} 
 
-.sidebar-nav > .sidebar-brand a {
+ .sidebar-nav > .sidebar-brand a {
     color: #000;
-}
+} 
 
-.sidebar-nav > .sidebar-brand a:hover {
+ .sidebar-nav > .sidebar-brand a:hover {
     color: #000;
     background: none;
-}
+} 
 
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 50;
-    }
-    #wrapper.toggled {
-        padding-left: 180px;
-    }
-    #sidebar-wrapper {
-        width: 58;
-    }
-    #wrapper.toggled #sidebar-wrapper {
-        width: 180px;
-    }
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 50;
-    }
+#wrapper {
+    padding-left: 50; 
+}
+#wrapper.toggled {
+    padding-left: 180px;
+}
+#sidebar-wrapper {
+    width: 58;
+}
+#wrapper.toggled #sidebar-wrapper {
+    width: 180px;
+}
+#page-content-wrapper {
+    padding: 20px;
+    position: relative;
+}
+#wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 50;
 }
